# QUANTBOTFX

./: .gitignore  Dockerfile  GITHUB_SETUP.md  ISSUES.md  PROJECT_RULES.md  README.md  SETUP_UPDATES.md  build_cpp_backend.sh  config.yaml  docker-compose.yml  env.example  requirements.txt  setup.sh  start.sh
.cursor/rules/: noduplicate.mdc
.github/workflows/: ci.yml  docker-publish.yml
backend/: CMakeLists.txt  app.py  data_config.py  data_loader.py  indicators.py  main.cpp  replay_engine.py
backend/core/: __init__.py
backend/include/: AuthService.hpp  IInterfaces.hpp  IndicatorCalculator.hpp  MockDataProvider.hpp  Models.hpp  ReplayEngine.hpp  TradingService.hpp
backend/routers/: __init__.py  backtrader.py  data.py  health.py  indicators.py  replay.py  replay_engine.py  strategies.py  trading.py  workflows.py
backend/services/: backtrader_service.py  indicator_service.py  replay_service.py  strategy_manager.py  workflow_manager.py
backend/src/: AuthService.cpp  IndicatorCalculator.cpp  MockDataProvider.cpp  TradingService.cpp
backend/strategies/: __init__.py  base_strategy.py  momentum_following_strategy.py
backtests/2025-02-20_18-33-50/: config  log.txt
backtests/2025-02-20_19-03-58/: config  log.txt
backtests/2025-02-21_00-04-38/: config  log.txt
backtests/2025-02-21_00-28-31/: config  log.txt
backtests/2025-02-21_00-33-59/: config  log.txt
backtests/2025-02-21_00-37-08/: config  log.txt
backtests/2025-02-21_00-48-45/: config  log.txt
backtests/2025-02-27_11-32-39/: config  log.txt
backtests/2025-03-04_18-56-49/: config  log.txt
backtests/2025-03-04_19-01-14/: config
backtests/2025-03-04_19-05-02/: config  log.txt
backtests/2025-07-06_09-51-55/: config  log.txt
backtests/2025-07-06_09-59-34/: 1461700548-log.txt  config  failed-data-requests-20250706135935718.txt  log.txt  succeeded-data-requests-20250706135935718.txt
backtests/2025-07-06_14-17-56/: 1359620602-log.txt  config  failed-data-requests-20250706181759154.txt  log.txt
backtests/2025-07-06_14-19-54/: config  log.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts  (+3 more)
tests/: README.md  __init__.py  run_tests.py
(+74 files in other folders)
